2009-07-30  Gert Driesen  <drieseng@users.sourceforge.net>

	* SqlParameter.cs: Modified ConvertToFrameworkType to only perform
	conversion if type of value is different from "system type". Make
	DbTypeMapping hashtable available on 1.0 profile, and add missing
	mappings. Wrap FormatException adding information on conversion
	that failed.

2009-07-30  Veerapuram Varadhan  <vvaradhan@novell.com>

	* SqlDataAdapter.cs (*Command): Build fix for 1.x profile.
	
2009-07-30  Veerapuram Varadhan  <vvaradhan@novell.com>

	** Fixes the issue reported by Scott <Scott.Fluto@cmgl.ca> in Mono-list
	* SqlParameter.cs (ConvertToFrameworkType): Return String.Empty 
	in case of zero-length strings.
	
2009-07-30  Veerapuram Varadhan  <vvaradhan@novell.com>

	* SqlDataAdapter.cs (IDbDataAdapter.*Command): Remove over-engineered 
	checks as the base implementation is changed.
	
2009-07-29  Veerapuram Varadhan  <vvaradhan@novell.com>

	* SqlDataAdapter.cs (IDbDataAdapter.*Command): Revert some of my earlier
	changes.  Validate the incoming value as we use bases' implementation now.
	Fixes failing tests.

	* SqlParameter.cs (GetSqlValue): Simplify handling of SqlValue and SqlTypes.
	(SqlTypeToFramworkType): Added support for SqlChars and SqlBytes types.

2009-07-28  Gert Driesen  <drieseng@users.sourceforge.net>

	* SqlCommand.cs: Ensure connection is closed if CloseConnection
	behavior is set, and reader could not be created.

2009-07-28  Gert Driesen  <drieseng@users.sourceforge.net>

	* More clean up of fix for #522624/#507663
	* SqlCommandBuilder.cs: Appropriately handle rowUpdatingHandler and
	more cleanup for 2.0 profile.

2009-07-26  Veerapuram Varadhan  <vvaradhan@novell.com>

	* SqlParameter.cs (get/set_SqlValue, GetSqlValue): Return the appropriately 
	SQL-typed param value.  Fixes failing provider tests.
	
2009-07-28  Gert Driesen  <drieseng@users.sourceforge.net>

       * SqlCommand.cs: Ensure connection is closed if CloseConnection