@@ -1,3 +1,8 @@
+2009-08-01  Gert Driesen  <drieseng@users.sourceforge.net>
+
+	* SqlParameter.cs (ConvertToFrameworkType): Only wrap FormatException
+	on 2.0 profile.
+
 2009-07-30  Gert Driesen  <drieseng@users.sourceforge.net>
 
 	* SqlParameter.cs: Modified ConvertToFrameworkType to only perform
